--- a/src/app/Feature/login/component/login.component.scss
+++ b/src/app/Feature/login/component/login.component.scss
@@ -1,199 +1,307 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f2f5;
+@import "../../../../scss/variables";
+// body {
+//     font-family: 'Arial', sans-serif;
+//     background-color: #f0f2f5;
+// }
+
+// .dashboard {
+//     width: 100%;
+// }
+
+// .dashboard-header {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     padding: 1rem;
+//     background-color: #003c8f;
+//     color: #fff;
+
+//     .menu-icon {
+//         font-size: 1.5rem;
+//         cursor: pointer;
+//     }
+
+//     .status-summary {
+//         display: flex;
+//         gap: 1rem;
+
+//         .status {
+//             padding: 0.5rem 1rem;
+//             border-radius: 8px;
+//             font-weight: bold;
+
+//             &.pending {
+//                 background-color: #f39c12;
+//             }
+//             &.cancel {
+//                 background-color: #e74c3c;
+//             }
+//             &.completed {
+//                 background-color: #2ecc71;
+//             }
+//         }
+//     }
+
+//     .admin-info {
+//         display: flex;
+//         align-items: center;
+//         gap: 1rem;
+
+//         .admin-name {
+//             font-weight: bold;
+//         }
+
+//         .toggle-switch {
+//             display: flex;
+//             align-items: center;
+//             gap: 0.5rem;
+
+//             .switch {
+//                 position: relative;
+//                 display: inline-block;
+//                 width: 34px;
+//                 height: 20px;
+
+//                 input {
+//                     opacity: 0;
+//                     width: 0;
+//                     height: 0;
+//                 }
+
+//                 .slider {
+//                     position: absolute;
+//                     cursor: pointer;
+//                     top: 0;
+//                     left: 0;
+//                     right: 0;
+//                     bottom: 0;
+//                     background-color: #ccc;
+//                     transition: .4s;
+//                     border-radius: 34px;
+
+//                     &.round {
+//                         border-radius: 34px;
+//                     }
+//                 }
+
+//                 input:checked + .slider {
+//                     background-color: #2196F3;
+//                 }
+
+//                 .slider:before {
+//                     position: absolute;
+//                     content: "";
+//                     height: 14px;
+//                     width: 14px;
+//                     left: 4px;
+//                     bottom: 3px;
+//                     background-color: white;
+//                     transition: .4s;
+//                     border-radius: 50%;
+//                 }
+
+//                 input:checked + .slider:before {
+//                     transform: translateX(14px);
+//                 }
+//             }
+//         }
+//     }
+// }
+
+// .table-container {
+//     padding: 1rem;
+//     background-color: #fff;
+//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+// }
+
+// .order-table {
+//     width: 100%;
+//     border-collapse: collapse;
+//     thead {
+//         background-color: #003c8f;
+//         color: white;
+//     }
+
+//     th, td {
+//         padding: 1rem;
+//         text-align: left;
+//     }
+
+//     tbody tr {
+//         &:nth-child(even) {
+//             background-color: #f9f9f9;
+//         }
+//     }
+
+//     .badge {
+//         padding: 0.5rem;
+//         border-radius: 5px;
+//         color: white;
+//         font-weight: bold;
+
+//         &.pending {
+//             background-color: #f39c12;
+//         }
+
+//         &.prepared {
+//             background-color: #8e44ad;
+//         }
+
+//         &.dispatched {
+//             background-color: #3498db;
+//         }
+
+//         &.delivered {
+//             background-color: #2ecc71;
+//         }
+
+//         &.cancelled {
+//             background-color: #e74c3c;
+//         }
+
+//         &.initiated {
+//             background-color: #f1c40f;
+//         }
+
+//         &.confirmed {
+//             background-color: #2980b9;
+//         }
+//     }
+// }
+
+// .calendar {
+//     background-color: #fff;
+//     padding: 1rem;
+//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//     margin-top: 1rem;
+
+//     .month {
+//         font-weight: bold;
+//         font-size: 1.2rem;
+//         margin-bottom: 0.5rem;
+//     }
+
+//     .days {
+//         list-style: none;
+//         display: flex;
+//         flex-direction: column;
+//         gap: 1rem;
+
+//         li {
+//             display: flex;
+//             justify-content: space-between;
+//             align-items: center;
+//             padding: 0.5rem;
+//             background-color: #f9f9f9;
+//             border-radius: 5px;
+//             font-weight: bold;
+//         }
+//     }
+// }
+.login-section {
+    height: 100vh;
 }
 
-.dashboard {
-    width: 100%;
+.logo {
+    width: 6rem;
 }
 
-.dashboard-header {
+.box-logo {
+    display: none;
+}
+
+.lhs {
+    background-color: #F6FAFF;
+    padding: 3vw;
+
+}
+
+.rhs {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    background-color: #003c8f;
-    color: #fff;
-    
-    .menu-icon {
-        font-size: 1.5rem;
-        cursor: pointer;
-    }
+    padding: 0 12vw 0 26%;
+    background: url("../../../../assets/images/tile-yellow.png"), $theme;
 
-    .status-summary {
-        display: flex;
-        gap: 1rem;
-
-        .status {
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            font-weight: bold;
-
-            &.pending {
-                background-color: #f39c12;
-            }
-            &.cancel {
-                background-color: #e74c3c;
-            }
-            &.completed {
-                background-color: #2ecc71;
-            }
-        }
-    }
-
-    .admin-info {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-
-        .admin-name {
-            font-weight: bold;
-        }
-
-        .toggle-switch {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-
-            .switch {
-                position: relative;
-                display: inline-block;
-                width: 34px;
-                height: 20px;
-
-                input {
-                    opacity: 0;
-                    width: 0;
-                    height: 0;
-                }
-
-                .slider {
-                    position: absolute;
-                    cursor: pointer;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    background-color: #ccc;
-                    transition: .4s;
-                    border-radius: 34px;
-
-                    &.round {
-                        border-radius: 34px;
-                    }
-                }
-
-                input:checked + .slider {
-                    background-color: #2196F3;
-                }
-
-                .slider:before {
-                    position: absolute;
-                    content: "";
-                    height: 14px;
-                    width: 14px;
-                    left: 4px;
-                    bottom: 3px;
-                    background-color: white;
-                    transition: .4s;
-                    border-radius: 50%;
-                }
-
-                input:checked + .slider:before {
-                    transform: translateX(14px);
-                }
-            }
-        }
+    background: {
+        blend-mode: overlay, normal;
+        repeat: repeat;
+        position: center;
     }
 }
 
-.table-container {
-    padding: 1rem;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+.login-container {
+    position: absolute;
+    top: 55%;
+    left: 3vw;
+    transform: translate(0, -50%);
 
-.order-table {
-    width: 100%;
-    border-collapse: collapse;
-    thead {
-        background-color: #003c8f;
+    background: {
         color: white;
     }
 
-    th, td {
-        padding: 1rem;
-        text-align: left;
-    }
+    padding: 3rem;
+    border-radius: 2rem;
+    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+    min-width: 40vw;
 
-    tbody tr {
-        &:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-    }
+    .login-box {
+        @include display(flex, start, space-between, 2.5rem, column);
 
-    .badge {
-        padding: 0.5rem;
-        border-radius: 5px;
-        color: white;
-        font-weight: bold;
-
-        &.pending {
-            background-color: #f39c12;
+        .heading {
+            font-size: 2rem;
+            line-height: 1.5;
+            font-weight: 800;
         }
 
-        &.prepared {
-            background-color: #8e44ad;
+        .sub-head {
+            opacity: 0.8;
+            font-weight: 600;
         }
 
-        &.dispatched {
-            background-color: #3498db;
-        }
-
-        &.delivered {
-            background-color: #2ecc71;
-        }
-
-        &.cancelled {
-            background-color: #e74c3c;
-        }
-
-        &.initiated {
-            background-color: #f1c40f;
-        }
-
-        &.confirmed {
-            background-color: #2980b9;
+        .border-b {
+            border-bottom: 3px solid $sec-theme;
+            padding-bottom: 20px;
         }
     }
 }
 
-.calendar {
-    background-color: #fff;
-    padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 1rem;
+.heading {
+    line-height: 1.3;
 
-    .month {
-        font-weight: bold;
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
+    font: {
+        size: 2.4rem;
+        weight: 700;
     }
 
-    .days {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+    text: {
+        transform: uppercase;
+    }
 
-        li {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.5rem;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-            font-weight: bold;
+    .theme {
+        color: $sec-theme;
+
+        font: {
+            size: 3.3rem;
+            weight: 900;
         }
+    }
+
+    +p {
+        margin-top: 1.4rem;
+        opacity: 0.8;
+    }
+}
+
+@media screen and (max-height: 860px) {
+    .logo {
+        display: none;
+    }
+
+    .box-logo {
+        display: block;
+    }
+    .login-container {
+        position: absolute;
+        top: 50%;
     }
 }
