--- a/src/app/Feature/login/component/login.component.html
+++ b/src/app/Feature/login/component/login.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="status-summary">
                 <div class="status pending">
-                    Pending: 400
+                    Pending: 4001
                 </div>
                 <div class="status cancel">
                     Cancel: 58
@@ -81,5 +81,10 @@
                 <!-- Add more days -->
             </ul>
         </div>
+        <div class="calendar">
+            <div class="month">Aug 2024</div>
+            <app-save-button></app-save-button>
+        </div>
     </div>
+    
 
