--- a/src/app/Feature/login/component/login.component.scss
+++ b/src/app/Feature/login/component/login.component.scss
@@ -231,7 +231,7 @@
 
 .login-container {
     position: absolute;
-    top: 55%;
+    top: 50%;
     left: 3vw;
     transform: translate(0, -50%);
 
@@ -300,8 +300,43 @@
     .box-logo {
         display: block;
     }
+
     .login-container {
         position: absolute;
         top: 50%;
     }
+}
+
+@media screen and (max-width: 1200px) {
+    .heading {
+        font-size: 2rem;
+
+        .theme {
+            font-size: 2.5rem;
+        }
+
+        +p {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            -webkit-line-clamp: 4;
+        }
+    }
+
+    .rhs {
+        padding-right: 1.5rem;
+    }
+
+    .login-container {
+        padding: 2rem;
+
+        .btn {
+            width: 100%;
+        }
+    }
+}
+
+.errorsShow {
+    border: 1px solid red !important;
 }
