--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,100 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import "./scss/variables";
 @import "./scss/reset";
 @import "./scss/module";
 
+.table-container {
+  margin: 20px;
+  /* Add some margin around the table */
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+
+// file copied code may be duplicated this can be delte 
+
+@import url(../node_modules/@swimlane/ngx-datatable/themes/material.scss);
+@import url(../node_modules/@swimlane/ngx-datatable/themes/bootstrap.scss);
+@import url(../node_modules/@swimlane/ngx-datatable/themes/dark.scss);
+
+.custom-background {
+  background-color: #ecf4ff;
+}
+
+.ngx-datatable.material .datatable-header .datatable-header-cell {
+  background-color: #d9e9ff;
+}
+
+.parentDiv {
+  display: flex;
+  width: 100%;
+  gap: 130px;
+}
+
+.OrdersInformation {
+  display: flex;
+  gap: 10px;
+}
+
+.pending {
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.datediv {
+  margin: 50px;
+  border: 1px solid black;
+  padding: 10px;
+  margin-right: 130px
+}
+
+.heading {
+  padding-left: 125px;
+}
+
+.statusAndMenu {
+  display: flex;
+  gap: 4px;
+}
+
+.Pending {
+  background-color: #ffedeb;
+  color: #f0897e;
+}
+
+.Confirmed {
+  background-color: #dff2ff;
+  color: #75bae9;
+}
+
+.Initiated {
+  background-color: #fff6e7;
+  color: #f5d29d;
+}
+
+.Prepared {
+  background-color: #fff4fd;
+  color: #f191db;
+}
+
+.Dispatched {
+  background-color: #f8e9ff;
+  color: #b987ce;
+}
+
+.Delivered {
+  background-color: #ddffeb;
+  color: #8fe8b5;
+}
+
+.Cancelled {
+  background-color: #ecf0f1;
+  color: #8d8e8f;
+}
+
+.status {
+  padding: 3px 6px;
+  border-radius: 5px;
+}
