Basic structure of Resturent Screen

--- a/src/app/Feature/dashboard/component/dashboard.component.html
+++ b/src/app/Feature/dashboard/component/dashboard.component.html
@@ -93,6 +93,9 @@
           </ngx-datatable>
       </div>
   }
+  <div style="margin-top:30px">
+    <app-save-button [name]="'Navigate To the Sync Menu'"  [navigate]="'sync-menu'">Navigate To the Sync Menu</app-save-button>
+  </div>
   </div>
   <div class="Calander">
     <div class="heading"><h2>Here is Calander data</h2></div>
@@ -102,6 +105,8 @@
       </div>
     }
   </div>
+
+  
 </div>
 
 
