--- a/src/app/Shared/UI-Elements/save-button/save-button/save-button.component.html
+++ b/src/app/Shared/UI-Elements/save-button/save-button/save-button.component.html
@@ -1,2 +1,2 @@
 <p>save-button works!</p>
-<button (click)="toNavigate('dashboard')">click Me To Navigate</button>
+<button (click)="toNavigate()">{{name}}</button>
