--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,7 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import "./scss/variables";
 @import "./scss/reset";
 @import "./scss/module";
-
-
-
 @import url(../node_modules/@swimlane/ngx-datatable/themes/material.scss);
 @import url(../node_modules/@swimlane/ngx-datatable/themes/bootstrap.scss);
 @import url(../node_modules/@swimlane/ngx-datatable/themes/dark.scss);
@@ -82,4 +80,106 @@
 .status{
     padding: 3px 6px;
     border-radius: 5px;
+}
+
+
+
+
+ 
+.header {
+    background-color: var(--primary-theme);
+    min-height: 70px;
+    padding: 0.6rem 2.5rem 0.6rem 7rem;
+    @include display(flex, center, space-between);
+    color: $white;
+    position: relative;
+ 
+    .brand {
+        @include display-fag(flex, center);
+        @include font(1.5rem);
+    }
+ 
+    .navigation {
+        @include display-fag(flex, center);
+        @include font(0.9rem);
+    }
+ 
+    .user-block {
+        @include display-fag(flex, center, 0.6rem);
+ 
+        .user-img {
+            max-width: 40px;
+        }
+ 
+        .status {
+            opacity: 0.5;
+        }
+    }
+ 
+    .sidecar-btn {
+        position: absolute;
+        top: 100%;
+        transform: translatey(-50%);
+        background-color: $theme;
+        border: 3px solid $white;
+        left: 2rem;
+        border-radius: 15rem;
+ 
+        min : {
+            height: 3.4rem;
+            width: 3.4rem;
+        }
+ 
+        font-size: 1.5rem;
+        @include display(flex, center, center);
+        cursor: pointer;
+        z-index: 1;
+ 
+    }
+}
+ 
+.status-menu {
+    @include display-fag(flex, center, );
+    margin-top: -3px;
+    padding-left: 7rem;
+ 
+    .status-bar {
+        min-width: 12rem;
+        min-height: 2.5rem;
+        text-align: center;
+        color: white;
+        filter: url(#round);
+ 
+        &:before {
+            content: "";
+            display: block;
+            min-height: 2.5rem;
+            clip-path: polygon(0 0, 100% 0, 87% 100%, 14% 100%);
+        }
+ 
+        span {
+            top: -2.2rem;
+            padding: 0.4rem 2.5rem 0.6rem 2.5rem;
+            position: relative;
+        }
+ 
+        &.hold {
+            &:before {
+                background-image: linear-gradient(180deg, #F9F2A0 -45.39%, #E1A747 100%);
+            }
+        }
+ 
+        &.cancel {
+            &:before {
+                background-image: linear-gradient(180deg, #F9B2A0 -75.42%, #E14747 100%);
+            }
+        }
+ 
+        &.success {
+            &:before {
+                background-image: linear-gradient(180deg, #C8FFF4 -42.57%, #1ABC9C 88.55%);
+            }
+ 
+        }
+    }
 }
