--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
     <aside class="navbar navbar-expand-lg" id="nav">
         <div class="w-100 d-flex container-fluid">
             <div class="d-flex align-items-center gap-2 ms-2">
-                <div class="menu-icon d-flex align-items-center justify-content-center me-3">
-                    <img src="../assets/images/svg/Menu-Icon.svg" alt="Menu-Icon">
+                <div class="menu-icon d-flex align-items-center justify-content-center me-3" >
+                    <button type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+                        <!-- <img src="../assets/images/svg/Menu-Icon.svg" alt="Menu-Icon"> -->
+                         <svg #MenuIcon></svg>
+                    </button>
                 </div>
                 <img src="../assets/images/svg/Vector.svg" alt="Logo">
                 <p class="fs-24 fw-600 cl-white m-0">Dashbaord</p>
@@ -27,3 +30,18 @@
     </aside>
 </header>
 <router-outlet></router-outlet>
+
+<!-- Side Car view  -->
+<div name="offCampus">
+    <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="staticBackdropLabel">Offcanvas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div><a href="/sync-menu" >Resturent Details</a></div>
+        <div><a href="/dashboard" >Dashbaord</a></div>
+        <div><a href="">LogOut</a></div>
+      </div>
+    </div>
+  </div>
