--- a/src/app/Feature/login/forgot-password/forgot-password.component.html
+++ b/src/app/Feature/login/forgot-password/forgot-password.component.html
@@ -29,35 +29,25 @@
             <div class="login-box">
 
                 <div class="border-b">
-                    <div class="heading">LOGIN</div>
+                    <div class="heading">Forgot Password</div>
                     <span class="sub-head">Login into your account</span>
                 </div>
                 <div class="form w-100">
                     <div class="mb-3">
                         <!-- email -->
-                        <label for="email">Email</label>
+                        <label for="email">Email / Phone No.</label>
                         <input required id="username" [(ngModel)]="userData.username" name="username" type="text"
-                            [ngClass]="(usernameError || errorMessage) && (userData.username == null || userData.username == '' ) ? 'errorsShow':''"
-                            class="form-control">
-                        <div *ngIf="usernameError">Username is required.</div>
-                    </div>
-                    <div class="w-100">
-                        <!-- password -->
-                        <label for="password">password</label>
-                        <input required id="password" [(ngModel)]="userData.password" name="password"
-                            [ngClass]="(passwordError || errorMessage) && (userData.password == null || userData.password == '' ) ? 'errorsShow':''"
-                            type="password" class="form-control">
-                        <div *ngIf="passwordError">Password is required.</div>
+                            [ngClass]="(usernameError || errorMessage) ? 'errorsShow':''" class="form-control">
+                        <div *ngIf="usernameError">Email is required.</div>
                     </div>
                 </div>
                 <div *ngIf="errorMessage && !usernameError && !passwordError" class="error">
                     {{ errorMessage }}
                 </div>
                 <span style="display: flex;">
-                    <button class="btn btn-theme">Login</button>
+                    <button class="btn btn-theme">Forgot</button>
                 </span>
             </div>
         </form>
-        <button class="btn btn-theme" (click)="goToForgot()">Forgot Password</button>
     </div>
 </div>
