--- a/src/app/Feature/sync-menu/component/sync-menu.component.html
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.html
@@ -53,76 +53,66 @@
                 </div>
               </div>
             </form>
-          </div>
+        </div>
     }
-    @if(rows && rows.length > 0 && loding && !loadingIndicator){
-      <div style="margin-top:45px;margin-left: 40px;margin-right: 40px;">
-          <ngx-datatable
-          class="material"
-          [rows]="pagedRows"
-          [loadingIndicator]="loadingIndicator"
-          [columns]="columns"
-          [columnMode]="ColumnMode.standard"
-          [headerHeight]="40"
-          [footerHeight]="55"
-          rowHeight="auto"
-          [reorderable]="reorderable"
-          [scrollbarV]="true"
-          [virtualization]="false"
-          [externalPaging]="true"
-          [count]="page.totalElements"
-          [offset]="page.pageNumber"
-          [limit]="page.size"
-          (page)="setPagination($event)"
-          >
-          <ngx-datatable-column name="Sr No.">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row['ShopCode'] }}
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Resturant Name">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row['ShopName'] }}
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Location" [cellClass]="'custom-background'">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row['Add2'] }}
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="City">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row['StateName'] }}
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Status">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row['Status'] }}
-            </ng-template>
-          </ngx-datatable-column>
-  
-          <ngx-datatable-column name="Menu" >
-            <ng-template let-row="row" ngx-datatable-cell-template>
-                <button (click)="getMenuList(row)"  type="button" style="background-color: #0b5ed7;color: white;" data-bs-toggle="modal" data-bs-target="#menu-modal">
-                  View
-                </button>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Sync">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-                <button (click)="openConfirmationPopup(row,constant.confirmation,constant.syncDataMessage,constant.SyncData)" type="button" style="background-color: green;color: white;" data-bs-toggle="modal" data-bs-target="#globalModel">
-                    Sync
-                  </button>
-            </ng-template>
-          </ngx-datatable-column>
-          </ngx-datatable>
+    @if(loding){
+      <div class="container-fluid">
+        <div class="px-4 mt-5">
+          <div class="table">
+            <div class="table-scroll">
+              <table mat-table [dataSource]="rows" class="mat-elevation-z8">
+                <ng-container matColumnDef="Sr No.">
+                  <th mat-header-cell *matHeaderCellDef> Sr No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.ShopCode}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="Resturant Name">
+                  <th mat-header-cell *matHeaderCellDef> Resturant Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.ShopName}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="Location">
+                  <th mat-header-cell *matHeaderCellDef> Location </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Location}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="City">
+                  <th mat-header-cell *matHeaderCellDef> City </th>
+                  <td mat-cell *matCellDef="let element"> {{element.City}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="Status">
+                  <th mat-header-cell *matHeaderCellDef> Status </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="Menu">
+                  <th mat-header-cell *matHeaderCellDef> Menu </th>
+                  <td mat-cell *matCellDef="let element">
+                    <button (click)="getMenuList(element)"  type="button" class="view-btn" data-bs-toggle="modal" data-bs-target="#menu-modal">
+                      View
+                    </button>
+                  </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="Sync">
+                  <th mat-header-cell *matHeaderCellDef> Sync </th>
+                  <td mat-cell *matCellDef="let element"> 
+                    <button (click)="openConfirmationPopup(element,constant.confirmation,constant.syncDataMessage,constant.SyncData)" type="button" class="sync-btn" data-bs-toggle="modal" data-bs-target="#globalModel">
+                      Sync
+                    </button>
+                  </td>
+                </ng-container>
+              
+                <tr  mat-header-row *matHeaderRowDef="columns"></tr>
+                <tr  mat-row *matRowDef="let row; columns: columns;"></tr>
+              </table>
+            </div>
+            <mat-paginator [length]="rows.length"  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+          </div>
+        </div>
       </div>
     }
-
     <!-- @if(showMenuModel){ -->
       <div class=" modal fade" id="menu-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
       aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -235,7 +225,7 @@
               </div>
           </div>
       </div>
-  </div>
+      </div>
     <!-- } -->
   </div>
 
