--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
         <div class="w-100 d-flex container-fluid">
             <div class="d-flex align-items-center gap-2 ms-2">
                 <div class="menu-icon d-flex align-items-center justify-content-center me-3" >
-                    <button type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
-                        <!-- <img src="../assets/images/svg/Menu-Icon.svg" alt="Menu-Icon"> -->
-                         <svg #MenuIcon></svg>
-                    </button>
+                    <a data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+                        <img src="../assets/images/svg/Menu-Icon.svg" alt="Menu-Icon">
+                    </a>
                 </div>
                 <img src="../assets/images/svg/Vector.svg" alt="Logo">
                 <p class="fs-24 fw-600 cl-white m-0">Dashbaord</p>
