--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,40 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$A2B_Front_End-primary: mat.define-palette(mat.$indigo-palette);
+$A2B_Front_End-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$A2B_Front_End-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$A2B_Front_End-theme: mat.define-light-theme((
+  color: (
+    primary: $A2B_Front_End-primary,
+    accent: $A2B_Front_End-accent,
+    warn: $A2B_Front_End-warn,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($A2B_Front_End-theme);
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import "./scss/variables";
 @import "./scss/reset";
@@ -9,20 +46,12 @@
 @import "./scss/nav";
 @import "./scss/table";
 
-@import url(../node_modules/@swimlane/ngx-datatable/themes/material.scss);
-@import url(../node_modules/@swimlane/ngx-datatable/themes/bootstrap.scss);
-@import url(../node_modules/@swimlane/ngx-datatable/themes/dark.scss);
 
-.custom-background{
-    background-color: #ecf4ff;
-}
-.ngx-datatable.material .datatable-header .datatable-header-cell{
-    background-color: #d9e9ff;
-}
+
 .parentDiv{
     display: flex;
     width : 100%;
-    gap : 130px;
+    gap : 20px;
 }
 
 .OrdersInformation{
@@ -35,10 +64,10 @@
 }
 
 .datediv{
-    margin : 50px;
-    border : 1px solid black;
-    padding : 10px;
-    margin-right :130px
+    margin: 10px;
+    border: 1px solid black;
+    padding: 10px;
+    margin-right: 30px;
 }
 
 .heading{
@@ -85,8 +114,9 @@
 }
 
 .status{
-    padding: 3px 6px;
-    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    @include display-fag(flex, center);
 }
 
 
@@ -147,7 +177,7 @@
  
 .status-menu {
     @include display-fag(flex, center, );
-    margin-top: -3px;
+    margin-top: -2px;
     padding-left: 7rem;
  
     .status-bar {
@@ -190,3 +220,6 @@
         }
     }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
