--- a/src/app/Feature/login/forgot-password/forgot-password.component.html
+++ b/src/app/Feature/login/forgot-password/forgot-password.component.html
@@ -9,17 +9,10 @@
                     <div class="heading">
                         <img src="../../../../assets/images/Logotheme.svg" alt="" class="logo box-logo mb-3">
 
-                        <div>Welcome to</div>
-                        <div class="theme">A2B Sweets</div>
+                        <div>{{welcomeText.welcomeTo}}</div>
+                        <div class="theme">{{welcomeText.theme}}</div>
                     </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime laborum dicta sequi placeat
-                        tempore
-                        quidem possimus. Fuga ipsam consequuntur sapiente tempora quos labore eligendi eius distinctio.
-                        Quidem soluta fuga magnam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
-                        laborum dicta sequi placeat
-                        tempore
-                        quidem possimus. Fuga ipsam consequuntur sapiente tempora quos labore eligendi eius distinctio.
-                        Quidem soluta fuga magnam.</p>
+                    <p>{{welcomeText.description}}</p>
                 </div>
             </div>
         </div>
@@ -36,7 +29,7 @@
                     <div class="mb-3">
                         <!-- email -->
                         <label for="email">Email / Phone No.</label>
-                        <input required id="username" [(ngModel)]="userData.username" name="username" type="text"
+                        <input placeholder="Email" required id="username" [(ngModel)]="userData.email" name="username" type="text"
                             [ngClass]="(usernameError || errorMessage) ? 'errorsShow':''" class="form-control">
                         <div *ngIf="usernameError">Email is required.</div>
                     </div>
